<resources>
    <string name="app_name">IntentsProj</string>
    <string name="Header">My Application</string>
    <string name="Input1" />
    <string name="Input2" />
    <string name="num1">Number1</string>
    <string name="num2">Number2</string>
    <string name="btnSubmit">OK</string>
    <string name="Addition">+</string>
    <string name="Substraction">-</string>
    <string name="Multiplication">*</string>
    <string name="Division">/</string>
    <string name="answer" />
</resources>
